--- a/Eulerian2_A340556.ipynb
+++ b/Eulerian2_A340556.ipynb
@@ -7,7 +7,7 @@
     "<h1 style='color:#5E7AFF'>Second order Eulerian numbers</h1> \n",
     "<h3 style='color:#5E7AFF'>A companion to <a href=\"https://oeis.org/A340556\">A340556</a></h3>\n",
     "<h4 style='color:#708090'>Peter Luschny, Feb. 2021</h4>\n",
-    "<p>Here you can download this SageMath <a href='http://luschny.de/OEIS/A340556.ipynb'>notebook</a>.</p>\n"
+    "<p>You can download this SageMath notebook from <a href='https://github.com/PeterLuschny/EulerianSecondOrderNumbers'>GitHub</a>.</p>\n"
    ]
   },
   {
